--- a/styles/style.css
+++ b/styles/style.css
@@ -28,4 +28,15 @@ body {
     .container {
       width: 100%; } }
 
+.header__topBar {
+  background: #373737; }
+  .header__topBar .container h1 {
+    display: inline-block;
+    font-size: 1.8rem;
+    color: #FFFFFF;
+    font-weight: normal;
+    margin: 0;
+    vertical-align: top;
+    padding: 20px 10px; }
+
 /*# sourceMappingURL=style.css.map */
