--- a/styles/style.css
+++ b/styles/style.css
@@ -39,4 +39,19 @@ body {
     vertical-align: top;
     padding: 20px 10px; }
 
+.header__navigation {
+  background: #474747; }
+  .header__navigation__menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row; }
+    .header__navigation__menu li a {
+      display: block;
+      padding: 20px;
+      color: #FFFFFF;
+      text-decoration: none;
+      font-size: 1.2rem; }
+
 /*# sourceMappingURL=style.css.map */
