--- a/src/scss/header/_topBar.scss
+++ b/src/scss/header/_topBar.scss
@@ -12,6 +12,12 @@
       vertical-align: top;
       padding: 20px 10px;
     }
+
+    .burger{
+      float:right;
+      margin-top:10px;
+      margin-right:10px;
+    }
   }
 
 }
