--- a/src/scss/header/_menu.scss
+++ b/src/scss/header/_menu.scss
@@ -1,5 +1,19 @@
 .header__navigation{
   background:$grey-light;
+  @media screen and (max-width:$stepSize1)
+  {
+    position:fixed;
+    top:0;
+    left:0;
+    height: 100%;
+    transform: translateX(-100%);
+    transition: all 0.250s ease-in;
+
+    &.is-active{
+      transform: translateX(0);
+    }
+  }
+
 
   &__menu{
     list-style:none;
@@ -7,6 +21,14 @@
     padding:0;
     display: flex;
     flex-direction:row;
+
+    @media screen and (max-width:$stepSize1)
+    {
+      flex-direction: column;
+      width:200px;
+      text-align: center;
+
+    }
 
     li{
       a{
