--- a/src/scss/header/_topBar.scss
+++ b/src/scss/header/_topBar.scss
@@ -17,6 +17,12 @@
       float:right;
       margin-top:10px;
       margin-right:10px;
+      display:none;
+
+      @media screen and (max-width:$stepSize1)
+      {
+        display: block;
+      }
     }
   }
 
