--- a/styles/style.css
+++ b/styles/style.css
@@ -41,16 +41,35 @@ body {
   .header__topBar .container .burger {
     float: right;
     margin-top: 10px;
-    margin-right: 10px; }
+    margin-right: 10px;
+    display: none; }
+    @media screen and (max-width: 640px) {
+      .header__topBar .container .burger {
+        display: block; } }
 
 .header__navigation {
   background: #474747; }
+  @media screen and (max-width: 640px) {
+    .header__navigation {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      transform: translateX(-100%);
+      transition: all 0.250s ease-in; }
+      .header__navigation.is-active {
+        transform: translateX(0); } }
   .header__navigation__menu {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: row; }
+    @media screen and (max-width: 640px) {
+      .header__navigation__menu {
+        flex-direction: column;
+        width: 200px;
+        text-align: center; } }
     .header__navigation__menu li a {
       display: block;
       padding: 20px;
